--- a/index.html
+++ b/index.html
@@ -1,1 +1,77 @@
-<html></html>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Portfólio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icone-do-site.ico">
+</head>
+<body>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="logo">
+                <h1>Meu Portfólio</h1>
+            </div>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/seu-perfil" target="_blank">
+                    <img src="linkedin-icon.png" alt="LinkedIn">
+                </a>
+                <a href="https://medium.com/@seu-usuario" target="_blank">
+                    <img src="medium-icon.png" alt="Medium">
+                </a>
+            </div>
+        </div>
+    </header>
+
+    <!-- Apresentação -->
+    <section id="apresentacao">
+        <div class="container">
+            <div class="imagem">
+                <img src="sua-imagem.jpg" alt="Sua Foto">
+            </div>
+            <div class="texto">
+                <h2>Olá, eu sou [Seu Nome]</h2>
+                <p>Eu sou [uma breve descrição sobre você, suas habilidades, experiência e interesses].</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projetos -->
+    <section id="projetos">
+        <div class="container">
+            <h2>Meus Projetos</h2>
+            <div class="projetos-grid">
+                <div class="projeto">
+                    <img src="projeto1.jpg" alt="Projeto 1">
+                    <p>Descrição do Projeto 1</p>
+                </div>
+                <div class="projeto">
+                    <img src="projeto2.jpg" alt="Projeto 2">
+                    <p>Descrição do Projeto 2</p>
+                </div>
+                <div class="projeto">
+                    <img src="projeto3.jpg" alt="Projeto 3">
+                    <p>Descrição do Projeto 3</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <footer>
+        <div class="container">
+            <p>Email: seuemail@example.com</p>
+            <div class="social-icons">
+                <a href="https://www.linkedin.com/in/seu-perfil" target="_blank">
+                    <img src="linkedin-icon.png" alt="LinkedIn">
+                </a>
+                <a href="https://medium.com/@seu-usuario" target="_blank">
+                    <img src="medium-icon.png" alt="Medium">
+                </a>
+            </div>
+        </div>
+    </footer>
+</body>
+</html>
