--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Portfólio</title>
+    <title>Portfólio Nicole Tomazoni</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icone-do-site.ico">
 </head>
@@ -11,14 +11,11 @@
     <!-- Header -->
     <header>
         <div class="container">
-            <div class="logo">
-                <h1>Meu Portfólio</h1>
-            </div>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/seu-perfil" target="_blank">
+                <a href="https://www.linkedin.com/in/nicole-tomazoni-pelentir/" target="_blank">
                     <img src="linkedin-icon.png" alt="LinkedIn">
                 </a>
-                <a href="https://medium.com/@seu-usuario" target="_blank">
+                <a href="https://medium.com/@nicole.tpelentir_46702" target="_blank">
                     <img src="medium-icon.png" alt="Medium">
                 </a>
             </div>
@@ -64,10 +61,10 @@
         <div class="container">
             <p>Email: seuemail@example.com</p>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/seu-perfil" target="_blank">
+                <a href="https://www.linkedin.com/in/nicole-tomazoni-pelentir/" target="_blank">
                     <img src="linkedin-icon.png" alt="LinkedIn">
                 </a>
-                <a href="https://medium.com/@seu-usuario" target="_blank">
+                <a href="https://medium.com/@nicole.tpelentir_46702" target="_blank">
                     <img src="medium-icon.png" alt="Medium">
                 </a>
             </div>
