--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Rodapé -->
     <footer>
         <div class="container">
-            <p>Email: seuemail@example.com</p>
+            <p>Email: nicole.tpelentir@gmail.com</p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/nicole-tomazoni-pelentir/" target="_blank">
                     <img src="linkedin-icon.png" alt="LinkedIn">
