--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="apresentacao">
         <div class="container">
             <div class="imagem">
-                <img src="sua-imagem.jpg" alt="Sua Foto">
+                <img src="/nicole-perfil.jpg" alt="Sua Foto">
             </div>
             <div class="texto">
                 <h2>Olá, eu sou [Seu Nome]</h2>
