--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="habilidade-card">
         <div class="row">
             <div class="icon col-3">
-            <img src="/codigo.png" alt="Tela com código"></div>
+            <img src="codigo.png" alt="Tela com código"></div>
             <h3 class="col-7 text-nowrap">Habilidades de Programação</h3>
         </div>
           <ul>
@@ -62,7 +62,7 @@
         <div class="habilidade-card">
             <div class="row">
             <div class="icon col-3">
-              <img src="/grafico.png" alt="Tela com gráfico">
+              <img src="grafico.png" alt="Tela com gráfico">
             </div>
             <h3  class="col-7 text-nowrap">Análise de Dados</h3></div>
             <ul>
@@ -77,7 +77,7 @@
           
         <div class="habilidade-card">
             <div class="row">
-          <div class="icon col-4"><img src="/soft.png" alt="Soft skill"></div>
+          <div class="icon col-4"><img src="soft.png" alt="Soft skill"></div>
           <h3 class="col-6 text-nowrap">Soft Skills</h3></div>
           <ul>
             <li>Comunicação Eficaz</li>
@@ -90,7 +90,7 @@
         </div>
         <div class="habilidade-card">
             <div class="row">
-          <div class="icon col-3"><img src="/estrela.png" alt="Estrela"></div>
+          <div class="icon col-3"><img src="estrela.png" alt="Estrela"></div>
           <h3 class="col-6 text-nowrap">Conteúdo Extra</h3></div>
           <ul>
             <li>Estatística</li>
@@ -110,7 +110,7 @@
             <div class="card bg-base-100 w-50 shadow-xl">
                 <figure>
                   <img
-                    src="/data-girls.png"
+                    src="data-girls.png"
                     alt="Projeto data girls" />
                 </figure>
                 <div class="card-body" style="background-color: #e9ecef;;">
@@ -123,7 +123,7 @@
               <div class="card bg-base-100 w-50 shadow-xl">
                 <figure>
                   <img
-                    src="/ancine.png"
+                    src="ancine.png"
                     alt="Projeto ancine" />
                 </figure>
                 <div class="card-body" style="background-color: #e9ecef;;">
@@ -137,7 +137,7 @@
               <div class="card bg-base-100 w-50 shadow-xl">
                 <figure>
                   <img
-                    src="/spotify.png"
+                    src="spotify.png"
                     alt="Projeto spotify" />
                 </figure>
                 <div class="card-body" style="background-color: #e9ecef;;">
