--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
       </div>
 
       <div class="texto">
-        <h2>Olá, eu sou a Nicole</h2>
+        <h1 style="font-size:25px;">Olá, eu sou a Nicole</h1>
         <p style="text-align: justify;">Estudante de Ciência da Computação, leitora voraz, instigada pela curiosidade e
           pelo desejo constante de aprender (bem nerdzinha). Sou analista de dados com foco em Python, SQL, DAX, Power
           BI e processos de ETL, além de experiência em modelagem de dados e storytelling. Tenho forte pensamento
           analítico, resolução de problemas e habilidades de comunicação, apoiados por organização e adaptabilidade. Meu
           trabalho inclui análises estatísticas e apresentação de resultados claros com Excel e PowerPoint. Quer
-          conversar? Me chama na DM ou pelo e-mail nicole.tpelentir@gmail.com!</p>
+          conversar? Pode me contactar pelo e-mail nicole.tpelentir@gmail.com!</p>
       </div>
     </div>
   </section>
@@ -120,10 +120,10 @@
     <div class="divider"></div>
 
     <!-- experiencia -->
-    <section class="experiencia">
-      <h2>Experiências Profissionais</h2>
-      <h4 id="content">Desenvolvedora Backend</h4>
-      <ul>
+    <section class="experiencia" style="margin: 10px 30px;">
+      <h1 style="text-align: center;font-size:25px;"><strong>Experiências Profissionais</strong></h1>
+      <h4 class="card-title">Desenvolvedora Backend</h4>
+      <ul style="margin-bottom: 20px; margin-top:20px;">
         <li>Realizei o mapeamento de licitações e desenvolvi scripts para o cadastro de dados em banco,
           garantindo a disponibilidade eficiente de informações relevantes aos usuários da plataforma.</li>
         <li>Colaborei com a equipe usando Git e GitHub, aplicando práticas de controle de versão que
@@ -134,30 +134,30 @@
           e aprimorando a qualidade do código.</li>
       </ul>
 
-      <h4 id="content">Atendimento ao Público</h4>
-      <ul>
+      <h4 class="card-title">Atendimento ao Público</h4>
+      <ul style="margin-bottom: 20px;">
         <li>Promovi a comunicação entre os departamentos de desenvolvimento e atendimento ao cliente,
           resultando em um aumento de 20% na satisfação do cliente.</li>
         <li>Habilidade em identificar necessidades, oferecer soluções personalizadas e promover a fidelização, contribuindo para o sucesso e crescimento da empresa.</li>
         <li>Atendimento aos clientes e colaboradores, fornecendo suporte e resposta às demandas internas.</li>
-        <li>Utilização de Excel/Google Planilhas, Pacote Office e Sistema ERP.</li>
+        <li>Utilização de Excel/Google Planilhas, Pacote Office</li>
       </ul>
     </section>
     <div class="divider"></div>
 
     <!-- Projetos -->
     <section>
+      <h1 style="text-align: center;font-size:25px; margin-bottom:20px;"><strong>Meus Projetos</strong></h1>
       <div class="container">
-
+       
         <div class="projetos-grid">
           <div class="card bg-base-100 w-50 shadow-xl">
             <figure>
               <img src="./data-girls.png" alt="Projeto data girls" />
             </figure>
             <div class="card-body" style="background-color: #e9ecef;;">
-              <h4 class="card-title">
-                <a href="https://www.kaggle.com/code/nicoletomazoni/bootcamp-datagirls-2024"> Análise de Dados State of
-                  Data Brasil</a>
+              <h4 class="card-title">Análise de Dados State of
+                  Data Brasil
               </h4>
               <p style="text-align: left;">O "State of Data Brazil 2023", é uma base de dados que busca reunir
                 informações dos profissionais da área de dados e disponibilizá-las para que a comunidade desfrute e crie
@@ -175,8 +175,7 @@
             </figure>
             <div class="card-body" style="background-color: #e9ecef;;">
               <h4 class="card-title">
-                <a href="https://medium.com/@nicole.tpelentir_46702/an%C3%A1lise-de-dados-da-ancine-549c88bc9695">Análise
-                  de Dados da Ancine</a>
+                Análise de Dados da Ancine
               </h4>
               <p style="text-align: left;">Você já reparou nas aberturas icônicas de filmes, como o castelo da Disney ou
                 o rugido do leão da MGM? Com o intuito de aprofundar minha compreensão sobre o cenário cinematográfico
@@ -184,8 +183,7 @@
                 distribuidoras de filmes. Esse projeto não só reflete minha paixão pelo cinema, mas também busca
                 explorar as dinâmicas e tendências do setor. Estou animado para compartilhar mais sobre essa jornada!
               </p>
-              <button class="btn btn-secondary"> <a
-                  href="https://medium.com/@nicole.tpelentir_46702/an%C3%A1lise-de-dados-da-ancine-549c88bc9695">Acessar</a></button>
+              <button class="btn btn-secondary"><a href="https://medium.com/@nicole.tpelentir_46702/an%C3%A1lise-de-dados-da-ancine-549c88bc9695"> Acessar</a></button>
             </div>
           </div>
           <div class="card bg-base-100 w-50 shadow-xl">
@@ -193,9 +191,8 @@
               <img src="./spotify.png" alt="Projeto spotify" />
             </figure>
             <div class="card-body" style="background-color: #e9ecef;;">
-              <h4 class="card-title">
-                <a href="https://www.kaggle.com/code/nicoletomazoni/clusteriza-o-spotify"> Clusterização dos dados do
-                  Spotify</a>
+              <h4 class="card-title">Clusterização dos dados do
+                  Spotify
               </h4>
               <p style="text-align: left;">O projeto consistiu na criação de um software de recomendações musicais
                 baseado em uma base de dados clusterizada, com o objetivo de ajudar usuários a descobrir novos artistas
