--- a/index.html
+++ b/index.html
@@ -208,6 +208,19 @@
               href="https://www.kaggle.com/code/nicoletomazoni/clusteriza-o-spotify">Acessar</a>
           </div>
         </div>
+        <!-- segunda linha -->
+        <div class="card bg-base-100 w-50 shadow-xl">
+          <figure>
+            <img src="./netflix.png" alt="Projeto spotify" />
+          </figure>
+          <div class="card-body" style="background-color: #e9ecef;;">
+            <h4 class="card-title">ETL dados campanhas da Netflix
+            </h4>
+            <p style="text-align: left;">Neste projeto, trabalhei com vários arquivos Excel provenientes do Brasil, França e Itália. Realizei a criação de duas colunas principais: uma para identificar a origem do usuário e outra para registrar a campanha na qual ele assinou a Netflix. Todos os dados foram consolidados em um único arquivo, otimizando o fluxo de trabalho para o desenvolvimento de dashboards. Com foco em confiabilidade e rastreabilidade, o projeto preparou a base de dados para uso eficiente em análises futuras.</p>
+            <a class="btn btn-secondary"
+              href="https://github.com/nicoletomazonipelentir/netflix-dataset">Acessar</a>
+          </div>
+        </div>
       </div>
   </section>
 
