--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               href="https://www.kaggle.com/code/nicoletomazoni/clusteriza-o-spotify">Acessar</a>
           </div>
         </div>
-        <br><br><br><br><br>
+        <div class="divider"></div>
         <!-- segunda linha -->
         <div class="card bg-base-100 w-50 shadow-xl">
           <figure>
