--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <div class="card-body" style="background-color: #e9ecef;">
             <h4 class="card-title">ETL dados campanhas da Netflix</h4>
             <p style="text-align: left;">
-              Neste projeto, trabalhei com vários arquivos Excel provenientes do Brasil, França e Itália...
+              Neste projeto, trabalhei com vários arquivos Excel provenientes do Brasil, França e Itália. Realizei a criação de duas colunas principais: uma para identificar a origem do usuário e outra para registrar a campanha na qual ele assinou a Netflix. Todos os dados foram consolidados em um único arquivo, otimizando o fluxo de trabalho para o desenvolvimento de dashboards. Com foco em confiabilidade e rastreabilidade, o projeto preparou a base de dados para uso eficiente em análises futuras.
             </p>
             <a class="btn btn-secondary" href="https://github.com/nicoletomazonipelentir/netflix-dataset">Acessar</a>
           </div>
