--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <!-- Header -->
-  <div class="navbar bg-base-100" style="background-color: #e9ecef;">
+  <div class="navbar bg-base-100" style="background-color: #d0b17a;">
     <div class="flex-1">
       <a class="btn btn-ghost text-xl">Nicole Tomazoni Pelentir</a>
     </div>
@@ -42,7 +42,7 @@
   <section id="apresentacao">
     <div class="container">
       <div class="imagem">
-        <img src="./nicole-perfil.jpg" alt="NA imagem aparece a Nicole" style="width: 300px; height: auto;">
+        <img src="./perfil-nicole.jpeg" alt="NA imagem aparece a Nicole" style="width: 200px;">
       </div>
 
       <div class="texto">
@@ -64,13 +64,18 @@
       <div class="habilidade-card">
         <div class="row">
           <div class="icon col-3">
-            <img src="./codigo.png" alt="Tela com código">
+            <img src="./icons8-marketing-50.png" alt="Tela com marketing">
           </div>
-          <h3 class="col-7 text-nowrap"> Habilidades de Programação</h3>
+          <h3 class="col-7 text-nowrap">Habilidades de Marketing</h3>
         </div>
         <ul>
-          <li>Python</li>
-          <li>Git e Github</li>
+          <li>Meta Ads</li>
+          <li>Google Ads</li>
+          <li>Tiktok Ads</li>
+          <li>Pinterest Ads</li>
+          <li>Google Analytics</li>
+          <li>Google Tag Manager</li>
+          <li>Bing Ads</li>
         </ul>
       </div>
       <div class="habilidade-card">
@@ -107,13 +112,14 @@
       <div class="habilidade-card">
         <div class="row">
           <div class="icon col-3"><img src="./estrela.png" alt="Estrela"></div>
-          <h3 class="col-6 text-nowrap">Conteúdo Extra</h3>
+          <h3 class="col-6 text-nowrap">Outros conhecimentos</h3>
         </div>
         <ul>
           <li>Estatística</li>
           <li>Inglês B2</li>
-          <li>Marketing Digital</li>
           <li>CRM</li>
+          <li>Python</li>
+          <li>Git e Github</li>
         </ul>
       </div>
     </div>
@@ -123,6 +129,17 @@
   <!-- experiencia -->
   <section class="experiencia" style="margin: 10px 30px;">
     <h1 style="text-align: center;font-size:25px;"><strong>Experiências Profissionais</strong></h1>
+
+    <h4 class="card-title">Analista de mídia</h4>
+    <ul style="margin-bottom: 20px; margin-top:20px;">
+      <li>Planejamento, execução e otimização de campanhas de mídia paga (Facebook Ads e Google Ads), com foco em ROI, conversões e geração de leads.</li>
+      <li>Criação de anúncios e conjuntos de anúncios estratégicos, alinhados aos objetivos da campanha e ao funil de vendas.</li>
+      <li>Monitoramento de performance, análise de métricas e extração de insights com uso de ferramentas como Google Analytics, Power BI, Data Studio e Excel.</li>
+      <li>Gestão de orçamento publicitário, elaboração de relatórios mensais e apresentações de resultados para clientes.</li>
+      <li>Otimização contínua de e-commerce, sites e landing pages, com testes, hipóteses e melhorias voltadas à conversão.</li>
+      <li>Participação em reuniões com clientes e atuação consultiva com boa desenvoltura no atendimento.</li>
+    </ul>
+
     <h4 class="card-title">Desenvolvedora Backend</h4>
     <ul style="margin-bottom: 20px; margin-top:20px;">
       <li>Realizei o mapeamento de licitações e desenvolvi scripts para o cadastro de dados em banco,
@@ -135,14 +152,12 @@
         e aprimorando a qualidade do código.</li>
     </ul>
 
-    <h4 class="card-title">Atendimento ao Público</h4>
+    <h4 class="card-title">Analista de CRM</h4>
     <ul style="margin-bottom: 20px;">
-      <li>Promovi a comunicação entre os departamentos de desenvolvimento e atendimento ao cliente,
-        resultando em um aumento de 20% na satisfação do cliente.</li>
-      <li>Habilidade em identificar necessidades, oferecer soluções personalizadas e promover a fidelização,
-        contribuindo para o sucesso e crescimento da empresa.</li>
-      <li>Atendimento aos clientes e colaboradores, fornecendo suporte e resposta às demandas internas.</li>
-      <li>Utilização de Excel/Google Planilhas, Pacote Office</li>
+      <ul style="margin-bottom: 20px; margin-top:20px;">
+      <li>Monitorei e melhorei continuamente a experiência do usuário por meio da análise de feedbacks, métricas de suporte e indicadores de satisfação.</li>
+      <li>Colaborei ativamente com as equipes de Desenvolvimento e Atendimento, promovendo alinhamento estratégico que otimizou processos internos e reduziu gargalos operacionais.</li>
+      <li>Automatizei relatórios e documentações sobre suporte e feedbacks, aumentando a eficiência da equipe e a tomada de decisão baseada em dados.</li>
     </ul>
   </section>
   <div class="divider"></div>
@@ -157,7 +172,7 @@
           <figure>
             <img src="./data-girls.png" alt="Projeto data girls" />
           </figure>
-          <div class="card-body" style="background-color: #e9ecef;;">
+          <div class="card-body" style="background-color: #d0b17a;">
             <h4 class="card-title">Análise de Dados State of
               Data Brasil
             </h4>
@@ -175,7 +190,7 @@
           <figure>
             <img src="./ancine.png" alt="Projeto ancine" />
           </figure>
-          <div class="card-body" style="background-color: #e9ecef;;">
+          <div class="card-body" style="background-color: #d0b17a;">
             <h4 class="card-title">
               Análise de Dados da Ancine
             </h4>
@@ -194,7 +209,7 @@
           <figure>
             <img src="./spotify.png" alt="Projeto spotify" />
           </figure>
-          <div class="card-body" style="background-color: #e9ecef;;">
+          <div class="card-body" style="background-color: #d0b17a;">
             <h4 class="card-title">Clusterização dos dados do
               Spotify
             </h4>
@@ -213,7 +228,7 @@
           <figure>
             <img src="./netflix.png" alt="Projeto netflix" />
           </figure>
-          <div class="card-body" style="background-color: #e9ecef;">
+          <div class="card-body" style="background-color: #d0b17a;">
             <h4 class="card-title">ETL dados campanhas da Netflix</h4>
             <p style="text-align: left;">
               Neste projeto, trabalhei com vários arquivos Excel provenientes do Brasil, França e Itália. Realizei a criação de duas colunas principais: uma para identificar a origem do usuário e outra para registrar a campanha na qual ele assinou a Netflix. Todos os dados foram consolidados em um único arquivo, otimizando o fluxo de trabalho para o desenvolvimento de dashboards. Com foco em confiabilidade e rastreabilidade, o projeto preparou a base de dados para uso eficiente em análises futuras.
